--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
   </head>
 
   <body>
-    <canvas id="main" width="550" height="550"></canvas>
-    <img id="source" class="source" alt="lady with rose"  src="./intini.jpg"/>
+    <div class="capper-wrapper">
+      <main>
+        <h1>Pixel-Swizzle</h1>
+        <canvas id="canvas" width="550" height="550"></canvas>
+        <img id="source" class="source" alt="lady with rose"  src="./intini.jpg"/>
+      </main>
+      <div class="capper capper--left"></div>
+      <div class="capper capper--right"></div>
+    </div>
     <script src="./js.js"></script>
   </body>
 </html>
